back-end_Deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: pnt-quiz  
  labels:
    app: backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: PNT-web-exercise:v0.1 
          ports:
            - containerPort: 8080  
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "500m"

  apiVersion: v1
  kind: Service
  metadata:
    name: backend-service
    namespace: pnt-quiz 
  spec:
    selector:
      app: backend
    ports:
      - protocol: TCP
        port: 80  
        targetPort: 8080  
    type: ClusterIP
